# ScienceHub

./: .prettierrc  CONTRIBUTING.md  Jenkinsfile  README.md  docker-compose.yml  sciencehub-microservices-workspace.code-workspace
database/schema/: development_schema.sql
kubernetes/: rust-microservice-deployment.yaml  rust-microservice-local-deployment.yaml  sciencehub-backend-api-gateway.yaml  sciencehub-backend-community.yaml  sciencehub-backend-core.yaml
kubernetes/old/: nextjs-local-deployment.yaml  rust-microservice-local-deployment.yaml
main/: .dockerignore  .gitignore  1.8.1  Dockerfile  README.md  SKIPmiddleware.ts  jest.config.js  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  types_db.ts
main/app/: globals.css  layout.tsx
main/bucket-management/: filenameManagement.ts
main/config/: availableSearchOptionsAdvanced.ts  availableSearchOptionsSimple.ts  getObjectNames.ts  navItems.config.ts  pages.config.ts  projectVersionedFields.config.ts  supportedFileTypes.config.ts  worksVersionedFields.config.ts
main/hooks/: useDebounce.ts
rust-microservice/: .dockerignore  Cargo.toml  Dockerfile  README.md
rust-microservice/src/: diffing.rs  error.rs  find_project_version_data.rs  main.rs  services.rs  utils.rs
rust-microservice/src/types/: types.rs
sciencehub-backend/: .gitignore  sciencehub-backend-core.sln  sciencehub-backend.sln
sciencehub-frontend/: .env.local  Makefile  docker-compose.yml  next.config.js  package-lock.json  package.json  tailwind.config.js
scripts/: RebuildBackend.ps1
(+1635 files in other folders)
