[package]
name = "sciencehub_version_control_system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4.0"
actix-cors = "0.6"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
futures = "0.3"
urlencoding = "2.1.3"